[package]
name = "dumq-mqtt"
version = "0.1.0"
edition = "2021"
description = "MQTT protocol library supporting versions 3.1.1 and 5.0"
license = "MIT"
repository = "https://github.com/your-username/dumq-mqtt"
keywords = ["mqtt", "protocol", "iot", "messaging"]
categories = ["network-programming", "asynchronous"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.10"

[[example]]
name = "client_example"
path = "examples/client_example.rs"

[[example]]
name = "server_example"
path = "examples/server_example.rs"

[[example]]
name = "retain_message_example"
path = "examples/retain_message_example.rs"

[lib]
name = "dumq_mqtt"
path = "src/lib.rs"
